[package]
name = "mush"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.17", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.0.34"
generic-array = "1.1.0"
hex = "0.4.3"
itertools = "0.14.0"
miniz_oxide = "0.8.0"
regex = "1.11.0"
sha1 = "0.10.6"
tempdir = "0.3.7"
